fixed alignment

--- a/src/App.css
+++ b/src/App.css
@@ -23,11 +23,6 @@ body,
   flex-direction: row;
 }
 
-h2 {
-  max-width: 80%;
-  margin: 0 auto;
-}
-
 .links {
   display: flex;
   align-items: center;
